data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4370.wast
;; 9. **Test Description**:    - Implement a scenario with `br_if` deciding between two paths: one with `call_indirect` using a valid type index and another using an undefined type index. Test `br_if`'s condition handling to correctly avoid an invalid type index.

(assert_invalid
  (module
    (type (func (param i32)))
    (table funcref (elem 0))
    (func $type-valid-vs-invalid
      (local i32)
      (block
        (br_if 0 (i32.const 1)
          (call_indirect (type 0) (i32.const 0) (i32.const 0))
        )
        (call_indirect (type 1) (i32.const 0))
      )
    )
  )
  "type mismatch"
)